src/test/deca/context/invalid/PereNoClass.deca
class A{
  int x;
}

class B extends x{
}
